
EXTRA_DIST = about.xpm charset.xpm column.xpm composer.xpm connect.xpm \
	create_new.xpm db.xpm disconnect.xpm dumpshp.xpm exif.xpm \
	exit.xpm foreign_key.xpm geometry.xpm geotable.xpm geoview.xpm \
	geovtable.xpm help.xpm hs_back_no.xpm hs_back.xpm hs_forward_no.xpm \
	hs_forward.xpm icon_info.xpm icon.xpm index.xpm kill_spindex.xpm \
	loaddbf.xpm loadshp.xpm loadtxt.xpm loadxl.xpm malformed_geoms.xpm \
	map_preview.xpm mbrcache.xpm memdb_clock.xpm memdb_load.xpm \
	memdb_new.xpm memdb_save.xpm network.xpm pkey.xpm primary_key.xpm \
	refresh.xpm rs_first.xpm rs_last.xpm rs_next.xpm rs_previous.xpm \
	spatialidx.xpm sql_abort_no.xpm sql_abort.xpm sql_go.xpm group.xpm \
	sql_script.xpm srids.xpm statistics.xpm tables.xpm table.xpm \
	topo_geo.xpm topo_net.xpm tmp_table.xpm tmp_view.xpm trigger.xpm \
	vacuum.xpm view.xpm virtdbf.xpm virtshp.xpm virttxt.xpm virtxl.xpm \
	vtable.xpm attach.xpm sql_log.xpm db_status.xpm loadxml.xpm \
	checkgeom.xpm sanegeom.xpm wfs.xpm wms.xpm dxf.xpm connect_ro.xpm \
	coverage.xpm coverage_tiles.xpm security_relaxed.xpm layer.xpm \
	security_lock.xpm security_rdonly.xpm vector.xpm sql_erase.xpm \
	clone.xpm gps_pics.xpm filter.xpm AttributionDisclaimer.txt \
	icon_map.xpm crosshair.xpm wms_off.xpm vector_off.xpm \
	coverage_off.xpm identify.xpm zoom_in.xpm zoom_out.xpm \
	map_table.xpm pan.xpm printer.xpm 	map_root.xpm map_go.xpm \
	map_edit.xpm map_add.xpm linestrings_on.xpm linestrings_off.xpm \
	points_on.xpm points_off.xpm polygons_on.xpm polygons_off.xpm \
	topo_geo_off.xpm topo_net_off.xpm dustbin.xpm gpkgtable.xpm \
	gpkgvtable.xpm gpkggeom.xpm virtgpkg.xpm gpkg_spatialidx.xpm \
	red_light.xpm green_light.xpm yellow_light.xpm map_magnify.xpm \
	postgres.xpm postgres_schema.xpm postgres_table.xpm \
	postgres_view.xpm loadgeojs.xpm virtgeojs.xpm dumpgeojs.xpm \
	layer_on.xpm layer_off.xpm quick_style.xpm remove_layer.xpm \
	layer_config.xpm center.xpm map_image.xpm mapconfig.xpm
